--- a/app/src/main/res/layout/music_list.xml
+++ b/app/src/main/res/layout/music_list.xml
@@ -1,22 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/musicListBox"
+<ListView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/musicList"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="16dp">
-
-    <TextView
-        android:id="@+id/musicTitle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:text="Music title" />
-
-    <TextView
-        android:id="@+id/artistName"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:text="artist" />
-
-</LinearLayout>
+    android:layout_height="match_parent" />
