List view design & layout interaction

--- a/app/src/main/res/layout/music_list.xml
+++ b/app/src/main/res/layout/music_list.xml
@@ -3,4 +3,6 @@
     android:id="@+id/musicList"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" />
+    android:layout_height="match_parent"
+    android:divider="@color/white"
+    android:dividerHeight="2dp" />
