--- a/app/src/main/res/layout/music_item.xml
+++ b/app/src/main/res/layout/music_item.xml
@@ -1,23 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp">
+    android:padding="16dp"
+    tools:background="@color/angry">
 
-    <TextView
-        android:id="@+id/musicTitle"
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textColor="@color/white"
-        tools:text="Music title" />
+        android:layout_weight="1"
+        android:orientation="vertical">
+        <TextView
+            android:id="@+id/musicTitle"
+            style="@style/list_item_text"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            tools:text="Music title" />
+        <TextView
+            android:id="@+id/musicAuthor"
+            style="@style/list_item_text"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            tools:text="Artist" />
+    </LinearLayout>
 
-    <TextView
-        android:id="@+id/musicAuthor"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="@color/white"
-        tools:text="artist" />
+    <ImageView
+        android:layout_width="32dp"
+        android:layout_height="match_parent"
+        android:contentDescription="Play Button"
+        android:scaleType="centerInside"
+        android:src="@drawable/play"/>
+
 
 </LinearLayout>
