--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -29,4 +29,11 @@
         <item name="android:textColor">@color/white</item>
     </style>
 
+    <!-- List Item TextViews. -->
+    <style name="list_item_text">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
 </resources>
