--- a/app/src/main/res/layout/music_item.xml
+++ b/app/src/main/res/layout/music_item.xml
@@ -16,6 +16,8 @@
             android:id="@+id/musicTitle"
             style="@style/list_item_text"
             android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textStyle="bold"
+            android:layout_marginBottom="8dp"
             tools:text="Music title" />
         <TextView
             android:id="@+id/musicAuthor"
@@ -27,9 +29,8 @@
     <ImageView
         android:layout_width="32dp"
         android:layout_height="match_parent"
-        android:contentDescription="Play Button"
+        android:contentDescription="@string/play_btn"
         android:scaleType="centerInside"
         android:src="@drawable/play"/>
-
 
 </LinearLayout>
