--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+    <!-- Main Colors -->
     <color name="colorPrimary">#212121</color>
     <color name="colorPrimaryDark">#000000</color>
-    <color name="colorAccent">#FF4081</color>
 
+    <!-- Custom -->
     <color name="white">#ffffff</color>
+    <color name="white_trans">#aaffffff</color>
 
     <!-- Moods -->
     <color name="angry">#C71585</color>
