--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -6,11 +6,11 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="18dp"
-    tools:context=".DetailsActivity"
-    tools:background="@color/angry">
+    tools:background="@color/angry"
+    tools:context=".DetailsActivity">
 
     <TextView
-        style="@style/detais_item_text"
+        style="@style/details_item_text"
         android:text="@string/now_playing"
         android:textSize="30sp" />
 
@@ -20,28 +20,28 @@
         android:layout_weight="1"
         android:contentDescription="@string/play_btn"
         android:scaleType="centerInside"
-        android:src="@drawable/play"/>
+        android:src="@drawable/play" />
 
     <TextView
         android:id="@+id/detailsMusicTitle"
-        style="@style/detais_item_text"
+        style="@style/details_item_text"
+        android:layout_marginBottom="8dp"
         android:textSize="30sp"
         android:textStyle="bold"
-        android:layout_marginBottom="8dp"
-        tools:text="Music title"/>
+        tools:text="Music title" />
 
     <TextView
         android:id="@+id/detailsMusicAuthor"
-        style="@style/detais_item_text"
+        style="@style/details_item_text"
         android:textSize="20sp"
-        tools:text="Music Author"/>
+        tools:text="Music Author" />
 
     <TextView
         android:id="@+id/detailsMusicDuration"
-        style="@style/detais_item_text"
-        android:textSize="20sp"
+        style="@style/details_item_text"
         android:layout_marginBottom="16dp"
-        tools:text="Music Duration"/>
+        android:textSize="20sp"
+        tools:text="Music Duration" />
 
     <Button
         android:id="@+id/moodChange"
